Add Debianized Hocus Pocus Modnight Commander theme.

--- a/OS/mc/skins/debianized_hocus_pocus.ini
+++ b/OS/mc/skins/debianized_hocus_pocus.ini
@@ -7,6 +7,11 @@
 #
 # Version : 0.0.0.0 SubZero
 #
+# Notes :
+# - To test this theme
+#   $ mc --skin=debianized_hocus_pocus.ini
+#
+
 
 [skin]
 description = Debianized Hocus Pocus
